--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,12 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.2.61'
+    ext {
+        kotlin_version = '1.2.61'
+        appCompactVersion = '1.0.0-rc02'
+        firebaseCoreVersion = '16.0.3'
+        firebaseMessagingVersion = '17.3.1'
+    }
     repositories {
         google()
         jcenter()
@@ -9,6 +14,7 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:3.3.0-alpha08'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath 'com.google.gms:google-services:4.0.1'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
