--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,20 +9,19 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="false"
+        android:hardwareAccelerated="true"
+        android:logo="@mipmap/ic_launcher"
         android:theme="@style/AppTheme">
 
-        <activity android:name=".ui.SplashScreenActivity"
-            android:screenOrientation="portrait">
+        <activity android:name=".ui.MainActivity"
+            android:screenOrientation="portrait"
+            android:launchMode="singleTop">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-        <activity android:name=".ui.MainActivity"
-            android:screenOrientation="portrait"
-            android:launchMode="singleTop"/>
 
         <service
             android:name=".service.FCMService">
@@ -34,6 +33,10 @@
         <meta-data
             android:name="com.google.firebase.messaging.default_notification_icon"
             android:resource="@drawable/dev_notification" />
+
+        <meta-data
+            android:name="com.google.firebase.messaging.default_notification_color"
+            android:resource="@color/notification_tint" />
 
     </application>
 
