--- a/build.gradle
+++ b/build.gradle
@@ -2,18 +2,20 @@
 
 buildscript {
     ext {
-        kotlin_version = '1.2.61'
+        kotlin_version = '1.2.70'
         appCompactVersion = '1.0.0-rc02'
         firebaseCoreVersion = '16.0.3'
         firebaseMessagingVersion = '17.3.1'
         tasomaniacVersion = '0.4'
+        inAppMessagingVersion = '17.0.1'
+        lottieVersion = '2.6.1'
     }
     repositories {
         google()
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.3.0-alpha08'
+        classpath 'com.android.tools.build:gradle:3.3.0-alpha10'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath 'com.google.gms:google-services:4.0.1'
         // NOTE: Do not place your application dependencies here; they belong
