--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,8 +34,8 @@ dependencies {
     implementation "com.google.firebase:firebase-inappmessaging-display:$inAppMessagingVersion"
     implementation "com.google.firebase:firebase-messaging:$firebaseMessagingVersion"
     implementation "com.tasomaniac:delayed-progress:$tasomaniacVersion"
-    implementation 'com.github.castorflex.smoothprogressbar:library:1.1.0'
-    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+    implementation "com.github.castorflex.smoothprogressbar:library:$smoothProgressbarVersion"
+    implementation "com.android.support.constraint:constraint-layout:$constraintLayoutVersion"
 
 }
 apply plugin: 'com.google.gms.google-services'
